fixed burger menu on iphone

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -151,6 +151,7 @@
 .burger-menu {
     width: 100%;
     height: 100vh;
+    max-height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     align-items: center;
